--- a/EuterpeaSite.cabal
+++ b/EuterpeaSite.cabal
@@ -36,6 +36,7 @@ Executable EuterpeaSite
     xmlhtml                   >= 0.1     && < 0.3,
     lens-family-core          >= 1.0     && < 1.3,
     http-conduit              >= 2       && < 2.1.9,
+    containers                >= 0.4     && < 6.0,
     sqlite-simple             >= 0.4     && < 1.0,
     snaplet-sqlite-simple     >= 0.4     && < 1.0,
     aeson                     >= 0.7     && < 1.0,
